--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <header>
         <nav>
             <a href="" class="logo"><span class="colorweb">Web</span><span class="colorstudio">Studio</span></a>
-            <ul class="site-nav">
+            <ul class="site-nav list">
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="contact">
+        <ul class="contact list">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
@@ -26,12 +26,12 @@
    <main>
         <section  class="baner">
             <h1 class="baner-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="submit">Заказать услугу</button>
+            <button type="button">Заказать услугу</button>
         </section>
     
         <!--Преимущества-->
         <section class="section">
-            <ul>
+            <ul class="list">
                 <li>
                     <h3 class="section-title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -54,7 +54,7 @@
     <!--Бокс-->
     <section class="section">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
             <li><img src="./images/box1j.jpg" alt="box1" width="370"></li>
             <li><img src="./images/box2j.jpg" alt="box2" width="370"></li>
             <li><img src="./images/box3j.jpg" alt="box3" width="370"></li>
@@ -63,7 +63,7 @@
     <!--Команда-->
     <section class="section">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
+        <ul class="list">
             <li><img src="./images/img.jpg" alt="img" width="270">
             <h3 class="section-title">Игорь Демьяненко</h3>
             <p>Product Designer</p></li>
@@ -80,11 +80,11 @@
     </section>
    </main>
    <footer class="footer">
-       <a href="">WebStudio</a>
+       <a href=""><span class="colorweb">Web</span><span class="colorstudio-second">Studio</span></a>
        <address>
          <p>г. Киев, пр-т Леси Украинки, 26</p>
        
-            <ul>
+            <ul class="contact-footer list">
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
