index and portfolio

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <a href="" class="logo"><span class="colorweb">Web</span><span class="colorstudio">Studio</span></a>
             <ul class="site-nav list">
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="./index.html" class="current">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -26,7 +26,7 @@
    <main>
         <section  class="baner">
             <h1 class="baner-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+            <button type="button" class="button">Заказать услугу</button>
         </section>
     
         <!--Преимущества-->
