--- a/portfolio.html
+++ b/portfolio.html
@@ -5,33 +5,106 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Portfolio</title>
+    <title>WebStudio</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="">WebStudio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+            <a href="" class="logo"><span class="colorweb">Web</span><span class="colorstudio">Studio</span></a>
+            <ul class="site-nav list">
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="" class="current">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="contact list">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        
+        <ul class="list">
+            <li><a href="">Все</a></li>
+            <li><a href="">Веб-сайты</a></li>
+            <li><a href="">Приложения</a></li>
+            <li><a href="">Дизайн</a></li>
+            <li><a href="">Маркетинг</a></li>
+        </ul>
+
+        <ul class="list">
+            <li>
+                <a href="">
+                    <img src="./images/p1.jpg" alt="picture" width="370">
+                    <h2>Технокряк</h2>
+                    <p>Веб-сайт</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./images/p2.jpg" alt="picture" width="370">
+                    <h2>Постер New Orlean vs Golden Star</h2>
+                    <p>Дизайн</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./images/p3.jpg" alt="picture" width="370">
+                    <h2>Ресторан Seafood</h2>
+                    <p>Приложение</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./images/p4.jpg" alt="picture" width="370">
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./images/p5.jpg" alt="picture" width="370">
+                    <h2>Проект Boxes</h2>
+                    <p>Приложение</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./images/p6.jpg" alt="picture" width="370">
+                    <h2>Inspiration has no Borders</h2>
+                    <p>Веб-сайт</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./images/p7.jpg" alt="picture" width="370">
+                    <h2>Издание Limited Edition</h2>
+                    <p>Дизайн</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./images/p8.jpg" alt="picture" width="370">
+                    <h2>Проект LAB</h2>
+                    <p>Маркетинг</p>
+                </a>
+            </li>
+
+            <li>
+                <a href="">
+                    <img src="./images/p9.jpg" alt="picture" width="370">
+                    <h2>Growing Business</h2>
+                    <p>Приложение</p>
+                </a>
+            </li>
+        </ul>
     </main>
-   <footer>
-       <a href="">WebStudio</a>
+    <footer class="footer">
+       <a href=""><span class="colorweb">Web</span><span class="colorstudio-second">Studio</span></a>
        <address>
          <p>г. Киев, пр-т Леси Украинки, 26</p>
        
-            <ul>
+            <ul class="contact-footer list">
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
