--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         </ul>
     </header>
     <main>
-        <ul class="list">
+        <ul class="list filter-list">
             <li><a href="">Все</a></li>
             <li><a href="">Веб-сайты</a></li>
             <li><a href="">Приложения</a></li>
@@ -32,7 +32,7 @@
             <li><a href="">Маркетинг</a></li>
         </ul>
 
-        <ul class="list">
+        <ul class="list filter-list">
             <li>
                 <a href="">
                     <img src="./images/p1.jpg" alt="picture" width="370">
