--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
     <title>WebStudio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -53,7 +54,7 @@
         </section>
     <!--Бокс-->
     <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
+        <h2 class="section-title title-box">Чем мы занимаемся</h2>
         <ul class="list">
             <li><img src="./images/box1j.jpg" alt="box1" width="370"></li>
             <li><img src="./images/box2j.jpg" alt="box2" width="370"></li>
@@ -62,26 +63,26 @@
     </section>
     <!--Команда-->
     <section class="section">
-        <h2 class="section-title">Наша команда</h2>
+        <h2 class="section-title title-box">Наша команда</h2>
         <ul class="list">
             <li><img src="./images/img.jpg" alt="img" width="270">
-            <h3 class="section-title">Игорь Демьяненко</h3>
-            <p>Product Designer</p></li>
+            <h3 class="section-title title-card">Игорь Демьяненко</h3>
+            <p class="comand-text">Product Designer</p></li>
             <li><img src="./images/img1.jpg" alt="img1" width="270">
-            <h3 class="section-title">Ольга Репина</h3>
-            <p>Frontend Developer</p></li>
+            <h3 class="section-title title-card">Ольга Репина</h3>
+            <p class="comand-text">Frontend Developer</p></li>
             <li><img src="./images/img2.jpg" alt="img2" width="270">
-            <h3 class="section-title">Николай Тарасов</h3>
-            <p>Marketing</p></li>
+            <h3 class="section-title title-card">Николай Тарасов</h3>
+            <p class="comand-text">Marketing</p></li>
             <li><img src="./images/img3.jpg" alt="img3" width="270">
-            <h3 class="section-title">Михаил Ермаков</h3>
-            <p>UI Designer</p></li>
+            <h3 class="section-title title-card">Михаил Ермаков</h3>
+            <p class="comand-text">UI Designer</p></li>
         </ul>
     </section>
    </main>
    <footer class="footer">
-       <a href=""><span class="colorweb">Web</span><span class="colorstudio-second">Studio</span></a>
-       <address>
+       <a href="" class="logo"><span class="colorweb">Web</span><span class="colorstudio-second">Studio</span></a>
+       <address class="footer-address">
          <p>г. Киев, пр-т Леси Украинки, 26</p>
        
             <ul class="contact-footer list">
