--- a/portfolio.html
+++ b/portfolio.html
@@ -25,77 +25,77 @@
         </ul>
     </header>
     <main>
-        <ul class="list filter-list">
-            <li><a href="">Все</a></li>
-            <li><a href="">Веб-сайты</a></li>
-            <li><a href="">Приложения</a></li>
-            <li><a href="">Дизайн</a></li>
-            <li><a href="">Маркетинг</a></li>
+        <ul class="list filter">
+            <li><button type="button">Все</button></li>
+            <li><button type="button">Веб-сайты</button></li>
+            <li><button type="button">Приложения</button></li>
+            <li><button type="button">Дизайн</button></li>
+            <li><button type="button">Маркетинг</button></li>
         </ul>
 
-        <ul class="list filter-list">
+        <ul class="list">
             <li>
                 <a href="">
                     <img src="./images/p1.jpg" alt="picture" width="370">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="filter-title">Технокряк</h2>
+                    <p class="filter-text">Веб-сайт</p>
                 </a>
             </li>
             <li>
                 <a href="">
                     <img src="./images/p2.jpg" alt="picture" width="370">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <h2 class="filter-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="filter-text">Дизайн</p>
                 </a>
             </li>
             <li>
                 <a href="">
                     <img src="./images/p3.jpg" alt="picture" width="370">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <h2 class="filter-title">Ресторан Seafood</h2>
+                    <p class="filter-text">Приложение</p>
                 </a>
             </li>
             <li>
                 <a href="">
                     <img src="./images/p4.jpg" alt="picture" width="370">
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="filter-title">Проект Prime</h2>
+                    <p class="filter-text">Маркетинг</p>
                 </a>
             </li>
             <li>
                 <a href="">
                     <img src="./images/p5.jpg" alt="picture" width="370">
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <h2 class="filter-title">Проект Boxes</h2>
+                    <p class="filter-text">Приложение</p>
                 </a>
             </li>
             <li>
                 <a href="">
                     <img src="./images/p6.jpg" alt="picture" width="370">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="filter-title">Inspiration has no Borders</h2>
+                    <p class="filter-text">Веб-сайт</p>
                 </a>
             </li>
             <li>
                 <a href="">
                     <img src="./images/p7.jpg" alt="picture" width="370">
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <h2 class="filter-title">Издание Limited Edition</h2>
+                    <p class="filter-text">Дизайн</p>
                 </a>
             </li>
             <li>
                 <a href="">
                     <img src="./images/p8.jpg" alt="picture" width="370">
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="filter-title">Проект LAB</h2>
+                    <p class="filter-text">Маркетинг</p>
                 </a>
             </li>
 
             <li>
                 <a href="">
                     <img src="./images/p9.jpg" alt="picture" width="370">
-                    <h2>Growing Business</h2>
-                    <p>Приложение</p>
+                    <h2 class="filter-title">Growing Business</h2>
+                    <p class="filter-text">Приложение</p>
                 </a>
             </li>
         </ul>
