--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,14 @@
     </header>
     <main>
         <ul class="list filter">
-            <li><button type="button">Все</button></li>
+            <li><button type="button" class="button">Все</button></li>
             <li><button type="button">Веб-сайты</button></li>
             <li><button type="button">Приложения</button></li>
             <li><button type="button">Дизайн</button></li>
             <li><button type="button">Маркетинг</button></li>
         </ul>
 
-        <ul class="list">
+        <ul class="list projects">
             <li>
                 <a href="">
                     <img src="./images/p1.jpg" alt="picture" width="370">
@@ -100,9 +100,9 @@
             </li>
         </ul>
     </main>
-    <footer class="footer">
-       <a href=""><span class="colorweb">Web</span><span class="colorstudio-second">Studio</span></a>
-       <address>
+ <footer class="footer">
+       <a href="" class="logo"><span class="colorweb">Web</span><span class="colorstudio-second">Studio</span></a>
+       <address class="footer-address">
          <p>г. Киев, пр-т Леси Украинки, 26</p>
        
             <ul class="contact-footer list">
