--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!--Команда-->
     <section class="section">
         <h2 class="section-title title-box">Наша команда</h2>
-        <ul class="list">
+        <ul class="list section-team">
             <li><img src="./images/img.jpg" alt="img" width="270">
             <h3 class="section-title title-card">Игорь Демьяненко</h3>
             <p class="comand-text">Product Designer</p></li>
