--- a/portfolio.html
+++ b/portfolio.html
@@ -25,12 +25,13 @@
         </ul>
     </header>
     <main>
-        <ul class="list filter">
+        <section>
+            <ul class="list filter">
             <li><button type="button" class="button">Все</button></li>
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+            <li><button type="button" class="button-bgc">Веб-сайты</button></li>
+            <li><button type="button" class="button-bgc">Приложения</button></li>
+            <li><button type="button" class="button-bgc">Дизайн</button></li>
+            <li><button type="button" class="button-bgc">Маркетинг</button></li>
         </ul>
 
         <ul class="list projects">
@@ -99,6 +100,7 @@
                 </a>
             </li>
         </ul>
+        </section>
     </main>
  <footer class="footer">
        <a href="" class="logo"><span class="colorweb">Web</span><span class="colorstudio-second">Studio</span></a>
